Fix degrees labels

--- a/labels.yml
+++ b/labels.yml
@@ -43,23 +43,23 @@ labels:
       from: null
       to: 13
     2:
-      label: 14≥t≥16°C
+      label: 14≤t≤16°C
       from: 14
       to: 16
     3:
-      label: 17≥t≥19°C
+      label: 17≤t≤19°C
       from: 17
       to: 19
     4:
-      label: 20≥t≥22°C
+      label: 20≤t≤22°C
       from: 20
       to: 22
     5:
-      label: 23≥t≥25°C
+      label: 23≤t≤25°C
       from: 23
       to: 25
     6:
-      label: 26≥t≥28°C
+      label: 26≤t≤28°C
       from: 26
       to: 28
     7:
